[project]
name = "ledger"
version = "0.22.8"
description = "Keeos track on you crypto assets"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "asyncstdlib>=3.13.1",
    "granian[reload,uvloop]>=2.7.1",
    "litestar[opentelemetry,standard]>=2.20.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.46",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "pydevd-pycharm~=253.30387.173",
    "remote-pdb>=2.1.0",
    "web-pdb>=1.6.3",
]
